2001-01-28  Fernando Nasser  <fnasser@redhat.com>

	* library/gdbmenubar.itcl (menubar_new_menu): Save lable of a menu to
	use as index.
	(menubar_delete_menu): New function.  Delete a menu.

2001-01-28  Fernando Nasser  <fnasser@redhat.com>

	* library/gdbmenubar.itcl (menu_list): Add missing declararion for
	global variable.

2001-01-28  Fernando Nasser  <fnasser@redhat.com>

	* library/gdbmenubar.itcl (set_class_state): Turn off verbose debug
	messages.
	* library/gdbtoolbar.itcl (set_class_state): Ditto.

2001-01-26  Fernando Nasser  <fnasser@redhat.com>

	* generic/gdbtk-cmds.c (gdb_clear_file): Call exec_file_clear() and
	symbol_file_clear() instead of exec_file_command() and
	symbol_file_command().
	(gdb_find_file_command): Return the proper error text.

2001-01-25  Fernando Nasser  <fnasser@redhat.com>

	* library/srcbar.itcl: New file. Implement SrcBar, a menu and toolbar
	for the Source Window (code previously in srcmenubar.itcl and
	srctoolbar.itcl).
	* library/srcmenubar.itcl: Remove obsolete file.
	* library/srctoolbar.itcl: Remove obsolete file.
	* library/srcbar.tcl: Remove obsolete file.
	* library/gdbmenubar.itcl (menubar_show): New method. Associate the
	menu with the toplevel window.
        * library/srcwin.itb (_build_win): Use SrcBar.
	* library/tclIndex: Regenerate.

2001-01-24  Fernando Nasser  <fnasser@redhat.com>

	From  Martin Hunt  <hunt@cygnus.com>
	* generic/gdbtk-cmds.c (gdb_set_bp_addr, gdb_set_bp): Change
	strsave() to xstrdup().

2001-01-24  Fernando Nasser  <fnasser@redhat.com>

	From  Martin Hunt  <hunt@cygnus.com>
	* generic/gdbtk-cmds.c (gdbtk_dis_asm_read_memory): Fix call
	to xfer_memory().

2001-01-19  Fernando Nasser  <fnasser@redhat.com>

	* library/prefs.tcl (pref_set_defaults): Set default value of
	gdb/src/top_control to place the source window controls at the top.

2001-01-18  Fernando Nasser  <fnasser@redhat.com>

        * library/srctextwin.itb (_highlightAsmLine): Add missing FUNCNAME
	parameter.